# options-hedging-simulator

./: .gitignore  NOTES.md  main.py  pyproject.toml  requirements.txt
notebooks/: garch_test.py  hedging_error_test.py  paths_test.py  pricing_test.py
src/options_hedging/analytics/: pnl.py
src/options_hedging/hedging/: delta_hedge.py
src/options_hedging/pricing/: black_scholes.py  option_contract.py
src/options_hedging/simulation/: paths.py
src/options_hedging/volatility/: garch.py
tests/: test_delta_hedge.py  test_garch.py  test_paths.py  test_pnl.py  test_pricing.py
